@@ -8,13 +8,18 @@ import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
+import com.husc.lms.dto.response.ChatBoxResponse;
 import com.husc.lms.entity.Account;
 import com.husc.lms.enums.ErrorCode;
 import com.husc.lms.exception.AppException;
@@ -22,11 +27,12 @@ import com.husc.lms.mongoEntity.ChatBox;
 import com.husc.lms.mongoEntity.ChatBoxMember;
 import com.husc.lms.mongoRepository.ChatBoxMemberRepository;
 import com.husc.lms.mongoRepository.ChatBoxRepository;
-import com.husc.lms.mongoRepository.ChatMessageRepository;
 import com.husc.lms.mongoService.ChatBoxService;
 import com.husc.lms.repository.AccountRepository;
+import com.husc.lms.service.OffsetLimitPageRequest;
 
 import lombok.RequiredArgsConstructor;
+import java.util.Collections;
 
 @Service
 @RequiredArgsConstructor
@@ -129,15 +135,80 @@ public class ChatBoxServiceImpl implements ChatBoxService {
         }
 
         @Override
-        public Page<ChatBox> getAllChatBoxesForCurrentAccount(Pageable pageable) {
+        public Page<ChatBoxResponse> getAllChatBoxesForCurrentAccount(int pageNumber, int pageSize) {
                 Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
                 String currentUsername = authentication.getName();
 
                 List<String> chatBoxIds = memberRepo.findByAccountUsername(currentUsername)
                                 .stream()
                                 .map(ChatBoxMember::getChatBoxId)
-                                .toList();
-                return chatBoxRepo.findByIdIn(chatBoxIds, pageable);
+                                .collect(Collectors.toList());
+
+                if (pageSize < 1) {
+                        throw new IllegalArgumentException("pageSize must be 1 or greater.");
+                }
+
+                int actualOffset = pageNumber;
+                int actualLimit = pageSize + 1;
+                
+                Sort sort = Sort.by(Sort.Direction.DESC, "lastMessageAt");
+                
+                Pageable fetchPageable = new OffsetLimitPageRequest(actualOffset, actualLimit, sort);
+                
+                Page<ChatBox> fetchedChatBoxesPage = chatBoxRepo.findByIdIn(chatBoxIds, fetchPageable);
+                List<ChatBox> fetchedContent = fetchedChatBoxesPage.getContent();
+
+                boolean hasNext = fetchedContent.size() > pageSize;
+                List<ChatBox> chatBoxesToReturn = hasNext ? fetchedContent.subList(0, pageSize) : fetchedContent;
+
+                Pageable returnPageable = PageRequest.of(pageNumber/pageSize, pageSize, sort);
+
+                List<ChatBoxResponse> chatBoxResponses = chatBoxesToReturn.stream().map(chatBox -> {
+                        List<String> memberUsernamesList = chatBox.getMemberAccountUsernames();
+                        List<ChatBoxResponse.MemberAccountInChatBox> memberAccounts = new ArrayList<>();
+                        if (memberUsernamesList != null) {
+                                memberAccounts = memberUsernamesList.stream()
+                                                .map(username -> {
+                                                        Account account = accountRepo
+                                                                        .findByUsernameAndDeletedDateIsNull(username)
+                                                                        .orElseThrow(() -> new AppException(
+                                                                                        ErrorCode.ACCOUNT_NOT_FOUND));
+                                                        return ChatBoxResponse.MemberAccountInChatBox.builder()
+                                                                        .accountId(String.valueOf(account.getId()))
+                                                                        .acountUsername(username)
+                                                                        .accountFullname(account.getStudent() != null
+                                                                                        ? account.getStudent()
+                                                                                                        .getFullName()
+                                                                                        : account.getTeacher() != null
+                                                                                                        ? account.getTeacher()
+                                                                                                                        .getFullName()
+                                                                                                        : "")
+                                                                        .avatar(account.getStudent() != null
+                                                                                        ? account.getStudent()
+                                                                                                        .getAvatar()
+                                                                                        : account.getTeacher() != null
+                                                                                                        ? account.getTeacher()
+                                                                                                                        .getAvatar()
+                                                                                                        : "")
+                                                                        .build();
+                                                }).collect(Collectors.toList());
+                        }
+                        return ChatBoxResponse.builder()
+                                        .id(chatBox.getId())
+                                        .isGroup(chatBox.isGroup())
+                                        .createdAt(chatBox.getCreatedAt())
+                                        .createdBy(chatBox.getCreatedBy())
+                                        .name(chatBox.getName())
+                                        .updatedAt(chatBox.getUpdatedAt())
+                                        .lastMessage(chatBox.getLastMessage())
+                                        .lastMessageAt(chatBox.getLastMessageAt())
+                                        .lastMessageBy(chatBox.getLastMessageBy())
+                                        .memberAccountUsernames(memberAccounts)
+                                        .build();
+                }).collect(Collectors.toList());
+
+                long totalElements = fetchedChatBoxesPage.getTotalElements();
+                return new PageImpl<>(chatBoxResponses, returnPageable, totalElements);
         }
 
         @Override
@@ -148,5 +219,27 @@ public class ChatBoxServiceImpl implements ChatBoxService {
         @Override
         public List<ChatBoxMember> getChatBoxMembers(String chatBoxId) {
                 return memberRepo.findByChatBoxId(chatBoxId);
+        }
+
+        @Override
+        public ChatBox renameChatBox(String chatBoxId, String newName) {
+                // Lấy thông tin người dùng hiện tại
+                Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+                String currentUsername = authentication.getName();
+
+                // Kiểm tra chatbox tồn tại
+                ChatBox chatBox = chatBoxRepo.findById(chatBoxId)
+                                .orElseThrow(() -> new AppException(ErrorCode.CHATBOX_NOT_FOUND));
+
+                // Kiểm tra quyền đổi tên
+                if (!chatBox.getCreatedBy().equals(currentUsername)) {
+                        throw new AppException(ErrorCode.FORBIDDEN);
+                }
+
+                // Cập nhật tên mới
+                chatBoxRepo.updateNameById(chatBoxId, newName);
+
+                // Lấy và trả về chatbox đã cập nhật
+                return chatBoxRepo.findById(chatBoxId).orElseThrow(() -> new AppException(ErrorCode.CHATBOX_NOT_FOUND));
         }
 }
